k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: citizen-portal
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: citizen-portal
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
